--- a/03_HelloGeometryShader_ComputeShader/03_HelloGeometryShader_ComputeShader.vcxproj.filters
+++ b/03_HelloGeometryShader_ComputeShader/03_HelloGeometryShader_ComputeShader.vcxproj.filters
@@ -103,30 +103,19 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Shader\drawNormalFS.frag">
-      <Filter>Shader</Filter>
-    </None>
-    <None Include="Shader\drawNormalGS.geom">
-      <Filter>Shader</Filter>
-    </None>
-    <None Include="Shader\drawNormalVS.vert">
-      <Filter>Shader</Filter>
-    </None>
-    <None Include="Shader\flatFS.frag">
-      <Filter>Shader</Filter>
-    </None>
-    <None Include="Shader\flatGS.geom">
-      <Filter>Shader</Filter>
-    </None>
-    <None Include="Shader\flatVS.vert">
-      <Filter>Shader</Filter>
-    </None>
-    <None Include="Shader\shaderFS.frag">
-      <Filter>Shader</Filter>
-    </None>
-    <None Include="Shader\shaderVS.vert">
-      <Filter>Shader</Filter>
-    </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="Shader\drawNormalFS.frag" />
+    <CustomBuild Include="Shader\drawNormalGS.geom" />
+    <CustomBuild Include="Shader\drawNormalVS.vert" />
+    <CustomBuild Include="Shader\flatFS.frag" />
+    <CustomBuild Include="Shader\flatGS.geom" />
+    <CustomBuild Include="Shader\flatVS.vert" />
+    <CustomBuild Include="Shader\shaderFS.frag" />
+    <CustomBuild Include="Shader\shaderVS.vert" />
+    <CustomBuild Include="Shader\editvbCS.comp">
+      <Filter>Shader</Filter>
+    </CustomBuild>
   </ItemGroup>
 </Project>
