うまく頂点編集できないのはアラインメントの問題だったので、このページを参考に、頂点属性をvec4に統一して解決した。 vec4にした版のティーポットモデルを用意した。 https://www.reddit.com/r/vulkan/comments/9spolm/help_with_compute_shader_misaligned_write/

--- a/03_HelloGeometryShader_ComputeShader/03_HelloGeometryShader_ComputeShader.vcxproj
+++ b/03_HelloGeometryShader_ComputeShader/03_HelloGeometryShader_ComputeShader.vcxproj
@@ -161,7 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\commonSutraCopy\Swapchain.h" />
-    <ClInclude Include="..\commonSutraCopy\TeapotModel.h" />
+    <ClInclude Include="..\commonSutraCopy\TeapotModelAlignment.h" />
     <ClInclude Include="..\commonSutraCopy\VulkanAppBase.h" />
     <ClInclude Include="..\commonSutraCopy\VulkanBookUtil.h" />
     <ClInclude Include="..\common\imgui\examples\imgui_impl_glfw.h" />
